--- a/pages/index.html
+++ b/pages/index.html
@@ -7,69 +7,81 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script><meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="..\css\main.css" rel="stylesheet">
+    <script src="..\js\main.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="..\js\main.js"></script>
 </head>
 <body style="background-color: aqua;">
-    <nav class="navbar navbar-expand-lg
-     navbar-light bg-light">
-        <a href="#" class="navbar-brand"> 
-            Gerenciador de Tarefas</a>
-            <button class="navbar-toggler" type="button"
-            data-toggle="collapse" data-target="#textoNavbar"
-            aria-controls="textoNavbar" aria-expanded="false"
-            aria-label="Alternar Navegação">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="textoNavbar">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a href="#" class="nav-link">Home</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="tarefa.html"
-                            id="navbarDropdown" role="button" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false">
-                            Tarefas
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">  
+        <a class="navbar-brand" href="#"> 
+            Gerenciador de Tarefas 
+        </a>
+
+        <button class="navbar-toggler" type="button" 
+        data-toggle="collapse"
+        data-target="#textoNavbar" aria-controls="textoNavbar"
+        aria-expanded="false" aria-label="Alterna Navegação"> 
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="textoNavbar">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#"> Home </a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle"
+                        id="navbarDropdown" role="button" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false"> 
+                        Tarefas 
+                    </a>
+                    <div class="dropdown-menu" 
+                        aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="tarefas.html">
+                            Todas
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="tarefas.html"> Todas </a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="tarefas.html"> Academicas </a>
-                            <a class="dropdown-item" href="tarefas.html"> Profissionais </a>
-                            <a class="dropdown-item" href="tarefas.html"> Pessoais </a>
-                        </div>
-                    </li>  
-                    <li class="nav-item">
-                        <a href="perfil.html" class="nav-link">Perfil</a>
-                    </li>    
-                </ul>
-                <span class="navbar-text">
-                    <a href="login.html">Logout</a> 
-                </span>
-            </div>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="tarefas.html">
+                            Academico
+                        </a>
+                        <a class="dropdown-item" href="tarefas.html">
+                            Pessoal
+                        </a>
+                        <a class="dropdown-item" href="tarefas.html">
+                            Profissional
+                        </a>
+                    </div>  
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="perfil.html"> Perfil </a>
+                </li>
+            </ul>
+            <span class="navbar-text">
+                <a href="login.html"> Logout </a> 
+            </span>
+        </div>
     </nav>
     <header class="py-5">
         <div class="container px-lg-5">
             <div class="p-4 p-lg-5 bg-light rounded-3 text-center">
                 <div class="m-4 m-lg-5">
-                    <h1 class="display-5 fw-bold">Bem Vindo!</h1>
-                    <p class="fs-4"> Descrição do meu sistema...
-                        Descrição do meu sistema...
-                        Descrição do meu sistema...
-                        Descrição do meu sistema...
-                        Descrição do meu sistema...
-                        Descrição do meu sistema...
-                     </p>
-                     <a class="btn btn-success btn-lg" href="register.html">
-                           Registrar-se 
-                     </a>
+                    <h1 class="display-5 fw-bold">
+                        Bem Vindo!
+                    </h1>
+                    <p class="fs-4">
+                        Descrição do sistema ... Descrição do sistema ...
+                        Descrição do sistema ... Descrição do sistema ...
+                        Descrição do sistema ... Descrição do sistema ...
+                        Descrição do sistema ... Descrição do sistema ...
+                        Descrição do sistema ... Descrição do sistema ...
+                    </p>
+                    <a class="btn btn-primary btn-lg" href="register.html">
+                        Registrar-se
+                    </a>
                 </div>
-            </div>
+            </div> 
         </div>
     </header>
     <section class="pt-4">
@@ -77,111 +89,11 @@
             <div class="row">
                 <div class="col-lg-6 mb-5">
                     <div class="card bg-light border-0 h-100">
-                        <div class="card-body text-center p-4
-                                        p-lg-5">
-                            <h2 class="fs-4 fw-bold"> 
-                                Organize suas tarefas 
-                            </h2>
-                            <p class="mb-0">
-                                Use esse sistema para organizar melhor
-                                suas tarefas e blablablablablablabla
-                            </p>
-                            <button class="btn btn-primary"
-                                    data-bs-toggle="collapse" 
-                                    data-bs-target="#info1">
-                                Ver mais
-                            </button>
-                            <div class="collapse" id="info1">
-                                Texto mais detalhado sobre esse ponto
-                                do sistema e blablablablablablablabla
-                                blablablablablablablabla blablablablablablabla
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 mb-5">
-                    <div class="card bg-light border-0 h-100">
-                        <div class="card-body text-center p-4
-                                        p-lg-5">
-                            <h2 class="fs-4 fw-bold"> 
-                                Acompanhe sua produtividade
-                            </h2>
-                            <p class="mb-0">
-                                Use esse sistema para acompanhar melhor
-                                sua produtividade e blablablablablablabla
-                            </p>
-                            <button class="btn btn-primary"
-                                    data-bs-toggle="collapse" 
-                                    data-bs-target="#info2">
-                                Ver mais
-                            </button>
-                            <div class="collapse" id="info2">
-                                Texto mais detalhado sobre esse ponto
-                                do sistema e blablablablablablablabla
-                                blablablablablablablabla blablablablablablabla
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-6 mb-5">
-                    <div class="card bg-light border-0 h-100">
-                        <div class="card-body text-center p-4
-                                        p-lg-5">
-                            <h2 class="fs-4 fw-bold"> 
-                                Organize suas tarefas 
-                            </h2>
-                            <p class="mb-0">
-                                Use esse sistema para organizar melhor
-                                suas tarefas e blablablablablablabla
-                            </p>
-                            <button class="btn btn-primary"
-                                    data-bs-toggle="collapse" 
-                                    data-bs-target="#info1">
-                                Ver mais
-                            </button>
-                            <div class="collapse" id="info1">
-                                Texto mais detalhado sobre esse ponto
-                                do sistema e blablablablablablablabla
-                                blablablablablablablabla blablablablablablabla
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 mb-5">
-                    <div class="card bg-light border-0 h-100">
-                        <div class="card-body text-center p-4
-                                        p-lg-5">
-                            <h2 class="fs-4 fw-bold"> 
-                                Acompanhe sua produtividade
-                            </h2>
-                            <p class="mb-0">
-                                Use esse sistema para acompanhar melhor
-                                sua produtividade e blablablablablablabla
-                            </p>
-                            <button class="btn btn-primary"
-                                    data-bs-toggle="collapse" 
-                                    data-bs-target="#info2">
-                                Ver mais
-                            </button>
-                            <div class="collapse" id="info2">
-                                Texto mais detalhado sobre esse ponto
-                                do sistema e blablablablablablablabla
-                                blablablablablablablabla blablablablablablabla
-                            </div>
-                        </div>
+
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <footer class="py-5 bg-dark">
-        <div class="container">
-            <p class="m-0 text-center text-white">
-                Copyright &copy; Your Website 2022
-            </p>
-        </div>
-    </footer>
 </body>
 </html>
