--- a/pages/register.html
+++ b/pages/register.html
@@ -23,7 +23,7 @@
                         <form id="register-form" class="form">
                             <div class="form-group">
                                 <label for="username" class="text-dark"> Username: </label>
-                                <input type="text" name="username" id="username" class="form-control" required>
+                                <input type="text" name="username" id="username" class="form-control" required >
                             </div>
                             <div class="form-group">
                                 <label for="email" class="text-dark"> Email: </label>
@@ -40,10 +40,12 @@
                             <div class="form-group">
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <input onclick="register()" type="button" name="submit" value="Register" class="btn bg-info btn-md mt-2">
+                                        <input onclick="register()" type="submit" name="submit" value="Register" class="btn bg-info btn-md mt-2">
                                     </div>
                                     <div class="col-md-6">
-                                        <a href="login.html" class="btn bg-success btn-md mt-2">Back</a>
+                                        <a href="index.html" class="btn bg-success btn-md mt-2">
+                                            Voltar
+                                        </a>
                                     </div>
                                 </div>
                             </div>
